# HPGM

./: .gitignore  pyproject.toml
LayoutGenerator_Lited/: main.py
LayoutGenerator_Lited/cfg/: layout_evaluator.yml  layout_evaluator_test.yml  layout_generator.yml  layout_generator_test.yml
LayoutGenerator_Lited/dataset/: Preprocess.py  datasets.py
LayoutGenerator_Lited/dataset/GenerateData/: GenerateTrainData.py
LayoutGenerator_Lited/miscc/: getContour.py  render3D.py
LayoutGenerator_Lited/trainer/: trainer_evaluator.py  trainer_generator.py
MultiLayerDataset/EvaluatorData/20_pair_train_data/: layers_hull_points_1.npy  layers_hull_points_10.npy  layers_hull_points_100.npy  layers_hull_points_101.npy  layers_hull_points_102.npy  layers_hull_points_103.npy  layers_hull_points_104.npy  layers_hull_points_105.npy  layers_hull_points_106.npy  layers_hull_points_108.npy  layers_hull_points_109.npy  layers_hull_points_11.npy  layers_hull_points_110.npy  layers_hull_points_111.npy  layers_hull_points_112.npy  layers_hull_points_114.npy  layers_hull_points_115.npy  (+708 more)
MultiLayerDataset/GeneratorTestData/: test_id.txt
Text-to-3DHouseModel/layout/: test_id.pickle  train_id.pickle
bbox_gcn_Lited_postprocessing/: datasets.py  functional.py  main.py  model_graph.py  regionProcessing.py  trainer.py  vutils.py
bbox_gcn_Lited_postprocessing/cfg/: layout.yml  layout_test.yml
bbox_gcn_Lited_postprocessing/miscc/: config.py
env/: pyvenv.cfg
text_generation_Lited/: main.py
text_generation_Lited/material/: material.txt
text_generation_Lited/util/: network.py
(+9144 files in other folders)
