[tool.poetry]
name = "hpgm"
version = "0.1.0"
description = ""
authors = ["Saku3449 <saku.studypg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.0.1"
python-dateutil = "^2.8.2"
numpy = "^1.26.0"
easydict = "^1.10"
pyyaml = "^6.0.1"
torchvision = "^0.15.2"
opencv-python = "^4.8.0.76"
matplotlib = "^3.8.0"
shapely = "^2.0.1"
open3d = "^0.17.0"
scikit-learn = "^1.3.0"
addict = "^2.4.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
